--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,39 @@
 :root {
+  --container-width: 1338px;
+  --default-padding-left: 16px;
+  --default-padding-right: 16px;
+  --header-menu-margin-left: 50px;
+  --footer-menu-margin-left: 80px;
+  --hed-foot-padding-top-bottom: 55px;
+
+  --page-bg: #ffffff;
+  --button-bg: #263238;
+  --skils-bg: #f5f5f5;
+  --price-bg: #eeeeee;
+
+  --logo-color: #000000;
+  --logo-accent: #939393;
+  --header-menu-color: #263238;
+  --button-lets-talk-color: #000000;
+  --button-lets-talk-border: #263238;
+  --h1-h2-color: #000000;
+  --h3-color: #263238;
+  --p-color: #8f95a5;
+  --button-color: #ffffff;
+  --about-us-counter: #2a3246;
+  --price-color: #263238;
+  --price-per-month-color: #546269;
+  --input-color: #8f95a5;
+  --footer-menu-color: #8f95a5;
 }
 
 body {
   font-family: 'Poppins', sans-serif;
-  background-color: #ffffff;
+  background-color: var(--page-bg);
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  color: var(--p-color);
 }
 
 h1,
@@ -26,4 +56,120 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+.section {
+  padding-top: 180px;
+}
+
+.container {
+  display: flex;
+  width: var(--container-width);
+  padding-left: var(--default-padding-left);
+  padding-right: var(--default-padding-right);
+  margin: 0 auto;
+}
+
+.header,
+.footer {
+  padding-top: var(--hed-foot-padding-top-bottom);
+  padding-bottom: var(--hed-foot-padding-top-bottom);
+}
+
+.header .container {
+  justify-content: center;
+  align-items: center;
+}
+.footer .container {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-logo {
+  display: block;
+  font-size: 36px;
+  letter-spacing: 0.03em;
+  color: var(--logo-color);
+  text-decoration: none;
+  margin-right: auto;
+}
+
+.header-logo:hover,
+.header-logo:focus {
+  color: var(--logo-accent);
+}
+
+.header-menu,
+.footer-menu {
+  display: flex;
+}
+
+.header-menu > .header-menu-item:not(:first-child) {
+  margin-left: var(--header-menu-margin-left);
+}
+
+.header-menu-link {
+  font-weight: 500;
+  color: var(--header-menu-color);
+}
+
+.header-menu-link:hover,
+.header-menu-link:focus {
+  color: var(--logo-accent);
+}
+
+.header-button {
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  /* line-height: 1.5; */
+  text-align: center;
+  /* letter-spacing: 0.03em; */
+  color: var(--button-lets-talk-color);
+
+  width: 312px;
+  height: 70px;
+  border: 2px solid var(--button-lets-talk-border);
+  border-radius: 10px;
+
+  background-color: inherit;
+  margin-left: auto;
+}
+
+.footer-logo {
+  display: block;
+  font-size: 36px;
+  letter-spacing: 0.03em;
+  color: var(--logo-color);
+  text-decoration: none;
+}
+
+.footer-logo:hover,
+.footer-logo:focus {
+  color: var(--logo-accent);
+}
+
+.footer-menu > .footer-menu-item:not(:first-child) {
+  margin-left: var(--footer-menu-margin-left);
+}
+
+.footer-menu-link {
+  font-size: 24px;
+  letter-spacing: 0.02em;
+  color: var(--footer-menu-color);
+}
+
+.footer-menu-link:hover,
+.footer-menu-link:focus {
+  color: var(--header-menu-color);
+}
+
+/* After all styles */
+.accent {
+  color: var(--logo-accent);
 }
