--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,10 @@
   --skills-writing-text-width: 340px;
   --skills-reading-text-width: 359px;
   --skills-listening-text-width: 324px;
+  --contact-us-text-width: 654px;
+
+  --grid-gap: 30px;
+  --contact-intup-field-width: 365px;
 }
 
 body {
@@ -71,6 +75,13 @@ summary {
   list-style: none;
 }
 
+input[type='text'] {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  margin: 0;
+}
+
 .section {
   padding-top: 180px;
 }
@@ -82,6 +93,25 @@ summary {
   margin: 0 auto;
 }
 
+.title-second {
+  font-weight: 600;
+  font-size: 48px;
+  color: var(--h1-h2-color);
+  margin-bottom: 60px;
+  text-align: center;
+}
+
+.title-third {
+  font-weight: 600;
+  font-size: 30px;
+  color: var(--h3-color);
+  margin-bottom: 20px;
+}
+
+.text {
+  margin-bottom: 30px;
+}
+
 .header,
 .footer {
   padding-top: var(--hed-foot-padding-top-bottom);
@@ -91,11 +121,6 @@ summary {
 .header .container {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-.footer .container {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
 }
 
@@ -158,6 +183,12 @@ summary {
   color: var(--button-color);
 }
 
+.footer .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .footer-logo {
   display: block;
   font-size: 36px;
@@ -212,32 +243,26 @@ summary {
   margin-bottom: 60px;
 }
 
-.hero-button {
-  font-weight: 400;
+.hero-button-name-width {
+  display: inline-block;
+  width: 298px;
   font-size: 36px;
   line-height: 1.5;
+}
+.hero-button {
   color: var(--button-color);
   background-color: var(--button-bg);
-  width: 426px;
-  height: 100px;
   border: 2px solid var(--button-bg);
   border-radius: 10px;
   cursor: pointer;
+  padding: 23px 64px;
 }
 
-.hero-button:hover,
+/* .hero-button:hover,
 .hero-button:focus {
   background-color: var(--logo-accent);
   color: var(--button-bg);
-}
-
-.skills-title {
-  font-weight: 600;
-  font-size: 48px;
-  color: var(--h1-h2-color);
-  text-align: center;
-  margin-bottom: 60px;
-}
+} */
 
 .skills-list {
   display: flex;
@@ -264,43 +289,43 @@ summary {
 }
 
 .skills-item-text {
-  display: inline-block;
   font-size: 16px;
-  color: var(--p-color);
-  margin-bottom: 30px;
 }
 
 .skills-speaking-text-width {
+  display: inline-block;
   width: var(--skills-speaking-text-width);
 }
 
 .skills-writing-text-width {
+  display: inline-block;
   width: var(--skills-writing-text-width);
 }
 
 .skills-reading-text-width {
+  display: inline-block;
   width: var(--skills-reading-text-width);
 }
 
 .skills-listening-text-width {
+  display: inline-block;
   width: var(--skills-listening-text-width);
 }
 
 .skills-detail {
+  display: inline-block;
   text-align: center;
-  font-weight: 500;
   background-color: var(--button-bg);
-  max-width: 218px;
-  height: 60px;
   border: 2px solid var(--button-bg);
   border-radius: 10px;
   cursor: pointer;
+  padding: 17px 64px;
 }
 
 .skills-detail-summary {
   font-size: 18px;
+  font-weight: 500;
   color: var(--button-color);
-  padding-top: 17px;
 }
 
 .skills-detail-text {
@@ -341,15 +366,9 @@ summary {
   width: 652px;
 }
 
-.about-title {
-  font-weight: 600;
-  font-size: 48px;
-  color: var(--h1-h2-color);
-  margin-bottom: 60px;
-}
-
-.about-text {
-  margin-block-end: 30px;
+.about-title,
+.contact-title {
+  text-align: left;
 }
 
 .about-counter-list {
@@ -370,6 +389,85 @@ summary {
   text-align: center;
 }
 
+.price-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.price-list-item {
+  display: flex;
+  flex-direction: column;
+  flex-basis: calc(100% / 3 - 2 * var(--grid-gap) / 3);
+}
+
+.price-label {
+  display: inline-block;
+  padding: 5px 23px 4px 29px;
+  background-color: var(--price-bg);
+  color: var(--price-color);
+  border-radius: 5px;
+  font-size: 24px;
+  margin-top: auto;
+}
+
+.price-period {
+  font-size: 18px;
+  color: var(--price-per-month-color);
+  margin-left: 28px;
+}
+
+.contact-us {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.contact-text {
+  display: block;
+  width: var(--contact-us-text-width);
+}
+.contact-form {
+  display: flex;
+}
+
+.contact-input {
+  display: inline-block;
+  width: 425px;
+  text-align: left;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.875;
+  color: var(--input-color);
+  padding: 20px 30px;
+  background-color: inherit;
+  border: 1px solid var(--input-color);
+  border-radius: 10px;
+}
+
+.submit-button {
+  display: inline-block;
+  text-align: center;
+
+  border: 2px solid var(--button-bg);
+  border-radius: 10px;
+
+  background-color: var(--button-bg);
+  cursor: pointer;
+
+  padding: 20px 56px;
+  margin-left: var(--grid-gap);
+}
+
+.submit-button-name {
+  display: block;
+  width: 200px;
+  font-family: inherit;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.03em;
+  line-height: 1.5;
+  color: var(--button-color);
+}
 /* After all styles */
 .accent {
   color: var(--logo-accent);
