--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@
 
   --grid-gap: 30px;
   --contact-intup-field-width: 365px;
+
+  --icon-width: 120px;
+  --icon-height: 120px;
 }
 
 body {
@@ -226,14 +229,30 @@ input[type='text'] {
   width: 540px;
 }
 
+.for-shift-icon {
+  display: flex;
+  margin-bottom: 40px;
+  width: 540px;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .hero-title {
-  display: inline-block;
+  display: block;
   width: 386px;
   font-weight: 600;
   font-size: 64px;
   line-height: 1.25;
   color: var(--h1-h2-color);
-  margin-bottom: 40px;
+}
+
+.icon {
+  border: none;
+  background-color: transparent;
+  background-image: url(../images/bulb-icon.svg);
+  background-size: contain;
+  width: var(--icon-width);
+  height: var(--icon-height);
 }
 
 .hero-text {
@@ -316,7 +335,10 @@ input[type='text'] {
   border: 2px solid var(--button-bg);
   border-radius: 10px;
   cursor: pointer;
-  padding: 17px 64px;
+  width: 230px;
+  max-height: 60px;
+  padding-top: 17px;
+  padding-bottom: 17px;
 }
 
 .skills-detail-summary {
